istio/destination-rule.yaml
apiVersion: Networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-destination-rule
  namespace: outfitstyle
spec:
  host: api-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 1000
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 30s
      baseEjectionTime: 30s
---
apiVersion: Networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ml-destination-rule
  namespace: outfitstyle
spec:
  host: ml-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 1000
        maxRequestsPerConnection: 10
      tcp:
        maxConnections: 1000
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 30s
      baseEjectionTime: 30s
